lab1_hls/axil_conv2D/logs/hls_run_csim_23980.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output C:/Users/Goncalo/Documents/SEC/lab1_hls/axil_conv2D\axil_conv2D.hlsrun_csim_summary, at 11/28/24 18:57:08
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir C:/Users/Goncalo/Documents/SEC/lab1_hls/axil_conv2D -config C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg -cmdlineconfig C:/Users/Goncalo/Documents/SEC/lab1_hls/axil_conv2D/hls/config.cmdline

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2024.1 (64-bit)
  **** SW Build 5069499 on May 21 2024
  **** IP Build 5075265 on Wed May 22 21:45:21 MDT 2024
  **** SharedData Build 5076995 on Wed May 22 18:29:18 MDT 2024
  **** Start of session at: Thu Nov 28 18:57:10 2024
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2024 Advanced Micro Devices, Inc. All Rights Reserved.

source C:/Xilinx/Vitis_HLS/2024.1/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] For user 'Goncalo' on host 'desktop-9fniqpr' (Windows NT_amd64 version 10.0) on Thu Nov 28 18:57:11 +0000 2024
INFO: [HLS 200-10] In directory 'C:/Users/Goncalo/Documents/SEC/lab1_hls'
INFO: [HLS 200-2005] Using work_dir C:/Users/Goncalo/Documents/SEC/lab1_hls/axil_conv2D 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/Users/Goncalo/Documents/SEC/lab1_prof/hls/axil_conv2D.cpp' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/Users/Goncalo/Documents/SEC/lab1_prof/hls/axil_conv2D.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/Users/Goncalo/Documents/SEC/lab1_prof/hls/axil_conv2D.h' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/Users/Goncalo/Documents/SEC/lab1_prof/hls/axil_conv2D.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:/Users/Goncalo/Documents/SEC/lab1_prof/hls/tb_axil_conv2D.cpp' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(15)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Goncalo/Documents/SEC/lab1_prof/hls/tb_axil_conv2D.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:\Users\Goncalo\Documents\SEC\lab1_prof\host\images.bin' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(16)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Goncalo/Documents/SEC/lab1_prof/host/images.bin' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=axil_conv2D' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7z020clg400-1' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-1'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(10)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=27%' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(11)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2.7ns.
INFO: [HLS 200-1465] Applying ini 'cosim.trace_level=all' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying ini 'cosim.wave_debug=1' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(14)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/Goncalo/Documents/SEC/lab1_hls/hls_config.cfg(5)
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [SIM 211-200] Compiling source code ../lab1_prof/hls/tb_axil_conv2D.cpp as test bench code with instrumentation
../lab1_prof/hls/tb_axil_conv2D.cpp:116:5: error: no matching function for call to 'saveAsPPM'
    saveAsPPM(hw_image_out);
    ^~~~~~~~~
../lab1_prof/hls/tb_axil_conv2D.cpp:32:6: note: candidate function not viable: no known conversion from 'unsigned char[3][7396]' to 'unsigned char **' for 1st argument
void saveAsPPM(unsigned char *matrix_out[]) {
     ^
../lab1_prof/hls/tb_axil_conv2D.cpp:133:5: error: no matching function for call to 'saveAsPPM'
    saveAsPPM(sw_image_out);
    ^~~~~~~~~
../lab1_prof/hls/tb_axil_conv2D.cpp:32:6: note: candidate function not viable: no known conversion from 'unsigned char[3][7396]' to 'unsigned char **' for 1st argument
void saveAsPPM(unsigned char *matrix_out[]) {
     ^
2 errors generated.
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 7.205 seconds; peak allocated memory: 174.863 MB.
